--- a/src/components/Empty/index.scss
+++ b/src/components/Empty/index.scss
@@ -3,12 +3,11 @@
   font-size: 16px;
   font-family: Kanit;
   font-weight: 300;
-  color: #505050;
+  color: $sub-title-color;
   text-align: center;
 
   > img {
-    width: 172px;
-    height: 172px;
-    margin-left: -40px;
+    width: 188px;
+    height: 157px;
   }
 }
