--- a/src/pages/SelectToken/index.scss
+++ b/src/pages/SelectToken/index.scss
@@ -27,7 +27,7 @@
     .sub-title {
       font-size: $font-size-lg;
       font-weight: $font-weight-bold;
-      color: #0a1629;
+      color: $sub-title-color;
       padding-bottom: $padding-xs;
       border-bottom: 1px solid #d8e0f0;
     }
@@ -42,11 +42,13 @@
         align-items: center;
         font-size: $font-size-base;
         font-weight: $font-weight-bold;
-        color: #0a1629;
+        color: $subsidiary-color;
+        padding: 0 12px;
       }
 
       .token-list-item:hover {
         background: $item-hover-bg;
+        border-radius: 10px;
       }
     }
   }
