--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -5,10 +5,14 @@
     box-shadow: 0px 6px 58px rgba(121, 145, 173, 0.2);
     border-radius: 24px;
 
+    .ant-modal-body {
+      padding: 24px 24px 32px;
+    }
+
     .title {
       font-size: 18px;
       font-weight: 600;
-      color: #0a1629;
+      color: $title-color;
       margin-top: 10px;
     }
 
@@ -24,6 +28,20 @@
         width: 24px;
         height: 24px;
       }
+    }
+
+    .has-divider {
+      &.title {
+        margin-bottom: 28px;
+      }
+    }
+    .divider {
+      height: 1px;
+      width: calc(100% - 10px);
+      background: #eaecf2;
+      display: inline-block;
+      position: absolute;
+      left: 5px;
     }
   }
 }
