--- a/src/pages/Submit/index.scss
+++ b/src/pages/Submit/index.scss
@@ -24,14 +24,14 @@
     .label {
       font-size: $font-size-sm;
       line-height: 24px;
-      color: #7c7c7c;
+      color: $legend-color;
       margin-top: 7px;
       margin-bottom: 3px;
     }
 
     .value {
       font-size: $font-size-lg;
-      color: #0a1629;
+      color: $sub-title-color;
       position: relative;
       > span {
         display: inline-block;
@@ -48,7 +48,6 @@
       line-height: 40px;
       text-align: center;
       background: $primary-color;
-      box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
       border-radius: 12px;
       font-size: $font-size-lg;
       font-weight: $font-weight-bold;
@@ -65,13 +64,17 @@
       height: 60px;
       border-radius: 20px;
       margin-top: 14px;
-      line-height: 72px;
+      line-height: 60px;
       text-align: center;
       background: $primary-color;
-      box-shadow: 0px 6px 12px rgba(63, 140, 255, 0.26);
       font-size: 18px;
       font-weight: $font-weight-medium;
       color: $white;
+      cursor: pointer;
+    }
+    .submit-btn:hover,
+    .generate-btn:hover {
+      background: $primary-8;
     }
   }
 }
