fix(page): fix style

--- a/src/pages/Transfer/InputBalance.scss
+++ b/src/pages/Transfer/InputBalance.scss
@@ -34,7 +34,7 @@
     font-size: 26px;
     font-family: Kanit;
     font-weight: 400;
-    color: #404040;
+    color: $text-color;
   }
 
   input::-webkit-input-placeholder {
