--- a/src/components/Empty/index.scss
+++ b/src/components/Empty/index.scss
@@ -1,13 +1,24 @@
 .empty-components {
-  margin-top: 45px;
   font-size: 16px;
   font-family: Kanit;
   font-weight: 300;
   color: $sub-title-color;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   > img {
     width: 188px;
     height: 157px;
+  }
+
+  .connect-btn {
+    width: 240px;
+    height: 40px;
+    margin-top: 14px;
+    border-radius: 20px;
+    font-size: 16px;
+    font-family: Kanit;
+    font-weight: 500;
   }
 }
