--- a/src/pages/HomePage/index.scss
+++ b/src/pages/HomePage/index.scss
@@ -10,7 +10,7 @@
     flex-direction: column;
     position: relative;
     height: 100%;
-    overflow: hidden;
+    // overflow: hidden;
 
     .main-content {
       height: 100%;
