--- a/src/pages/Proof/Cards.scss
+++ b/src/pages/Proof/Cards.scss
@@ -7,7 +7,7 @@
     display: flex;
     margin: 0 auto;
     flex-wrap: wrap;
-    justify-content: space-between;
+    gap: 12px;
     width: 100%;
 
     .card-item {
@@ -19,7 +19,7 @@
       padding: 20px;
       color: $white;
       background-size: cover;
-      margin-bottom: 16px;
+      margin-bottom: 4px;
 
       &.show {
         .main-item {
