--- a/src/pages/Submit/index.scss
+++ b/src/pages/Submit/index.scss
@@ -56,7 +56,7 @@
       position: absolute;
       right: 0px;
       top: -20px;
-      cursor: pointer;
+      margin-top: 0;
     }
 
     .submit-btn,
