--- a/src/pages/Proof/Lists.scss
+++ b/src/pages/Proof/Lists.scss
@@ -1,9 +1,9 @@
 .proof-lists {
   .proof-lists-header {
     display: grid;
-    gap: 1em;
+    gap: 10px;
     padding: 0 20px 12px;
-    grid-template-columns: 20px 2fr 2fr 1fr repeat(3, 2fr) 20px;
+    grid-template-columns: 20px 1.5fr 2fr 1fr 2fr 1fr 2fr 20px;
   }
 
   .proof-list + .proof-list {
