--- a/src/pages/HomePage/index.scss
+++ b/src/pages/HomePage/index.scss
@@ -10,13 +10,15 @@
     flex-direction: column;
     position: relative;
     height: 100%;
-    // overflow: hidden;
+    width: 100%;
 
     .main-content {
       height: 100%;
-      width: 960px;
+      width: 100%;
       margin: 0 auto;
-      overflow-x: auto;
+      padding: 0 10px;
+      display: flex;
+      justify-content: center;
     }
   }
 }
