--- a/src/pages/Proof/Cards.scss
+++ b/src/pages/Proof/Cards.scss
@@ -131,3 +131,11 @@
     }
   }
 }
+
+@media (max-width: $screen-md) {
+  .proof-cards {
+    .cards-main {
+      justify-content: center;
+    }
+  }
+}
