--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -10,9 +10,21 @@
     cursor: pointer;
   }
 
-  .menu-components {
+  .header-menu-wrapper {
     margin-right: auto;
     margin-left: 64px;
+    display: none;
+    &.open {
+      display: block;
+    }
+  }
+
+  .header-right {
+    display: flex;
+  }
+
+  .menu-btn {
+    display: none;
   }
 
   .btn {
@@ -43,5 +55,57 @@
     background: $white;
     font-size: 16px;
     color: #000000;
+  }
+}
+
+@media (max-width: $screen-sm) {
+  .header-component {
+    position: relative;
+    margin: 20px 10px 50px 10px;
+
+    .header-menu-wrapper {
+      position: absolute;
+      right: 10px;
+      top: 50px;
+      width: 156px;
+      background: $white;
+      box-shadow: 0px 6px 6px rgba(103, 104, 172, 0.2);
+      border-radius: 10px;
+      padding: 4px;
+      z-index: 999;
+      .header-menu {
+        display: flex;
+        flex-direction: column;
+        > li {
+          width: 148px;
+          height: 40px;
+          border: 0;
+          font-size: 16px;
+          font-family: Kanit;
+          font-weight: 400;
+          line-height: 0px;
+          color: #666666;
+          margin-left: 0;
+          padding: 0 12px;
+        }
+        > li:hover {
+          background: #eaecf2;
+          border-radius: 6px;
+          color: #666666;
+        }
+
+        > li.active {
+          background: #eaecf2;
+          border-radius: 6px;
+          color: #000000;
+        }
+      }
+    }
+    .menu-btn {
+      display: flex;
+      width: 79px;
+      height: 40px;
+      margin-left: $margin-xs;
+    }
   }
 }
