--- a/src/pages/Proof/index.scss
+++ b/src/pages/Proof/index.scss
@@ -1,5 +1,12 @@
 .proof {
+  width: 960px;
   height: calc(100% - 48px);
+
+  .proof-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
   .proof-header {
     display: flex;
@@ -13,6 +20,10 @@
       width: 24px;
       height: 24px;
       cursor: pointer;
+    }
+
+    .proof-search {
+      display: block;
     }
 
     .proof-header-img + .proof-header-img {
@@ -49,11 +60,32 @@
     }
   }
 
-  .proof-content {
-    height: calc(100% - 48px - 48px);
-    overflow: auto;
-  }
   .not-connected {
     margin-top: 40px;
+  }
+}
+
+@media (max-width: $screen-lg) {
+  .proof {
+    width: 650px;
+  }
+}
+
+@media (max-width: $screen-md) {
+  .proof {
+    width: 480px;
+  }
+}
+
+@media (max-width: $screen-sm) {
+  .proof {
+    .proof-header {
+      padding: 0 24px;
+      .proof-header-right {
+        .proof-search {
+          display: none;
+        }
+      }
+    }
   }
 }
