feat(dashboard): add dashboard

--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -30,7 +30,7 @@
     background: $white;
     border: 1px solid #c5c5de;
     border-radius: 24px;
-    color: $text-color;
+    color: $primary-color;
     font-weight: 400;
     font-size: 16px;
   }
