--- a/src/pages/Dashboard/Poap.scss
+++ b/src/pages/Dashboard/Poap.scss
@@ -6,17 +6,30 @@
         font-weight: 500;
         color: #000000;
         margin-top: 52px;
-        margin-bottom: 28px;
+        margin-bottom: 8px;
     }
 
     .content {
         height: 300px;
         .content-item {
-            width: 260px;
-            height: 300px;
-            background: #EDE9F7;
-            opacity: 1;
-            border-radius: 20px;
+            position: relative;
+
+            .poap-img {
+                width: 248px;
+                height: 336px;
+            }
+
+            .poap-num {
+                font-size: 12px;
+                font-family: Kanit;
+                font-weight: 600;
+                line-height: 0px;
+                color: #000000;
+            
+                position: absolute;
+                bottom: 117px;
+                left: 70px;
+              }
         }
     }
 }
