feat(dashboard): add banner and fix poap styles

--- a/src/pages/Dashboard/Poap.scss
+++ b/src/pages/Dashboard/Poap.scss
@@ -5,18 +5,19 @@
         font-family: Kanit;
         font-weight: 500;
         color: #000000;
-        margin-top: 52px;
+        margin-top: 72px;
         margin-bottom: 8px;
     }
 
     .content {
-        height: 300px;
+        // height: 300px;
         .content-item {
             position: relative;
 
             .poap-img {
-                width: 248px;
-                height: 336px;
+                width: 316px;
+                height: 438px;
+                image-rendering: -webkit-optimize-contrast;
             }
 
             .poap-num {
@@ -27,8 +28,8 @@
                 color: #000000;
             
                 position: absolute;
-                bottom: 117px;
-                left: 70px;
+                bottom: 151px;
+                left: 90px;
               }
         }
     }
