feat(poap): fix poap styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -45,3 +45,7 @@
 
 @import "./font.scss";
 @import "./reset.css";
+@import "./iconFont/iconfont.css";
+
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
