feat(dashboard): remove banner and update text

--- a/src/pages/Dashboard/Poap.scss
+++ b/src/pages/Dashboard/Poap.scss
@@ -5,7 +5,7 @@
         font-family: Kanit;
         font-weight: 500;
         color: #000000;
-        margin-top: 72px;
+        // margin-top: 72px;
         margin-bottom: 8px;
     }
 
