--- a/src/pages/Dashboard/index.scss
+++ b/src/pages/Dashboard/index.scss
@@ -1,10 +1,51 @@
 .dashboard {
-   
    .banner {
-    width: 1100px;
-    height: 130px;
-  
-    opacity: 1;
-    border-radius: 20px;
+      width: 1100px;
+      height: 220px;
+      margin-bottom: 52px;
+      position: relative;
+      img {
+         width: 1100px;
+         height: 220px;
+         border-radius: 20px;
+      }
+
+      .banner-desc {
+         font-size: 32px;
+         font-family: Kanit;
+         font-weight: 500;
+         line-height: 18px;
+         color: #FFFFFF;
+         opacity: 0.95;
+         position: absolute;
+         top: 52px;
+         left: 100px;
+      }
+
+      .banner-btn {
+         position: absolute;
+         bottom: 52px;
+         left: 100px;
+
+         >div {
+            width: 140px;
+            height: 44px;
+            background: linear-gradient(221deg, #BA60F2 0%, #3434E6 100%, #6C59E0 100%);
+            border-radius: 10px;
+            font-size: 18px;
+            font-family: Kanit;
+            font-weight: 400;
+            color: #FFFFFF;
+            border: 0;
+         }
+      }
+
+      .iconfont {
+         margin-left: 12px;
+      }
+
+      .icon-right-arrow {
+         font-size: 12px;
+      }
    }
 }
